--- a/about.html
+++ b/about.html
@@ -6,51 +6,168 @@
   <title>About | Golden Apple Technologies</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-      color: #f0f0f0;
-    }
-    .sidebar {
-      position: fixed;
-      top: 0; right: -250px;
-      width: 250px; height: 100%;
-      background-color: #111827;
-      padding: 1rem;
-      transition: right 0.3s ease-in-out;
-      z-index: 1000;
-    }
-    .sidebar.show { right: 0; }
-    .sidebar a {
-      display: block; padding: .5rem; margin-bottom: .5rem;
-      color: #f0f0f0; text-decoration: none;
-      border-right: 4px solid transparent;
-    }
-    .sidebar a:hover {
-      background-color: #1f2937; border-right: 4px solid #ffd700;
-    }
-    .header-glow {
-      text-shadow: 0 0 10px #ffd700, 0 0 20px #ffd700;
-    }
-    .form-control {
-      background-color: #1f2937; border: none; color: #fff;
-    }
-    .form-control::placeholder { color: #aaa; }
-    .menu-btn {
-      cursor: pointer; font-size: 1.5rem; color: #ffd700;
-    }
-    .history-img {
-      width: 100%; border-radius: 10px; margin-top: 1rem;
-    }
-    .section { display: none; }
-    .section.active { display: block; }
-    .card-platform {
-      background-color: #111827; border: none; color: #f0f0f0;
-      transition: transform 0.2s;
-    }
-    .card-platform:hover { transform: scale(1.05); }
-  </style>
+  <style>/* Base Styles */
+body {
+  font-family: 'Segoe UI', sans-serif;
+  background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+  color: #f0f0f0;
+  margin: 0;
+  padding: 0;
+}
+
+/* Typography */
+h1, h2, h3 {
+  line-height: 1.2;
+}
+.text-lg {
+  font-size: clamp(1rem, 2vw, 1.25rem);
+}
+.text-2xl {
+  font-size: clamp(1.5rem, 3vw, 2rem);
+}
+.text-3xl {
+  font-size: clamp(2rem, 4vw, 2.5rem);
+}
+
+/* Navbar */
+.navbar {
+  background-color: #111827!important;
+  box-shadow: 0 2px 10px rgba(255, 215, 0, 0.1);
+}
+
+/* Sidebar */
+.sidebar {
+  position: fixed;
+  top: 0;
+  right: -250px;
+  width: 250px;
+  height: 100%;
+  background-color: #111827;
+  padding: 1rem;
+  transition: right 0.4s ease-in-out, opacity 0.4s ease;
+  z-index: 1000;
+  opacity: 0.95;
+}
+.sidebar.show {
+  right: 0;
+  opacity: 1;
+}
+.sidebar h2 {
+  color: #ffd700;
+}
+.sidebar a {
+  display: block;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+  color: #f0f0f0;
+  text-decoration: none;
+  border-right: 4px solid transparent;
+  transition: all 0.3s ease;
+}
+.sidebar a:hover {
+  background-color: #1f2937;
+  border-right: 4px solid #ffd700;
+}
+
+/* Header Glow */
+.header-glow {
+  text-shadow: 0 0 10px #ffd700, 0 0 20px #ffd700;
+}
+
+/* Form Controls */
+.form-control {
+  background-color: #1f2937;
+  border: none;
+  color: #fff;
+}
+.form-control::placeholder {
+  color: #aaa;
+}
+
+/* Menu Button */
+.menu-btn {
+  cursor: pointer;
+  font-size: 1.5rem;
+  color: #ffd700;
+  transition: transform 0.3s ease;
+}
+.menu-btn:hover {
+  transform: rotate(90deg);
+}
+
+/* Section Transitions */
+.section {
+  display: none;
+  opacity: 0;
+  transform: translateY(10px);
+  transition: opacity 0.4s ease, transform 0.4s ease;
+}
+.section.active {
+  display: block;
+  opacity: 1;
+  transform: translateY(0);
+}
+
+/* History Images */
+.history-img {
+  width: 100%;
+  border-radius: 10px;
+  margin-top: 1rem;
+  transition: transform 0.3s ease;
+}
+.history-img:hover {
+  transform: scale(1.03);
+}
+
+/* Cards */
+.card-platform,.card {
+  background-color: #111827;
+  border: none;
+  color: #f0f0f0;
+  border-radius: 10px;
+  box-shadow: 0 0 15px rgba(255, 215, 0, 0.1);
+  transition: transform 0.2s, box-shadow 0.3s ease;
+}
+.card-platform:hover,.card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 25px rgba(255, 215, 0, 0.3);
+}
+
+/* Buttons */
+.btn-warning {
+  background-color: #ffd700;
+  color: #111827;
+  font-weight: bold;
+  border: none;
+  transition: all 0.3s ease;
+  box-shadow: 0 4px 10px rgba(255, 215, 0, 0.3);
+}
+.btn-warning:hover {
+  background-color: #ffcc00;
+  transform: scale(1.05);
+}
+
+/* Footer */
+footer {
+  padding: 1rem;
+  background-color: #111827;
+  box-shadow: 0 -2px 10px rgba(255, 215, 0, 0.1);
+  color: #aaa;
+  font-size: 0.9rem;
+}
+
+/* Custom Scrollbar */
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-track {
+  background: #1f2937;
+}
+::-webkit-scrollbar-thumb {
+  background: #ffd700;
+  border-radius: 4px;
+}
+ </style>
 </head>
 <body>
 
