--- a/about.html
+++ b/about.html
@@ -1,335 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About | Golden Apple Technologies</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>/* Base Styles */
-body {
-  font-family: 'Segoe UI', sans-serif;
-  background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-  color: #f0f0f0;
-  margin: 0;
-  padding: 0;
-}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Golden Apple Technologies</title>
+    <style>
+        /* Global Styles */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+        }
 
-/* Typography */
-h1, h2, h3 {
-  line-height: 1.2;
-}
-.text-lg {
-  font-size: clamp(1rem, 2vw, 1.25rem);
-}
-.text-2xl {
-  font-size: clamp(1.5rem, 3vw, 2rem);
-}
-.text-3xl {
-  font-size: clamp(2rem, 4vw, 2.5rem);
-}
+        body {
+            background-color: #f0f0f0;
+            line-height: 1.6;
+            color: #333;
+        }
 
-/* Navbar */
-.navbar {
-  background-color: #111827!important;
-  box-shadow: 0 2px 10px rgba(255, 215, 0, 0.1);
-}
+        /* Header Styles */
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 1rem;
+            text-align: center;
+        }
 
-/* Sidebar */
-.sidebar {
-  position: fixed;
-  top: 0;
-  right: -250px;
-  width: 250px;
-  height: 100%;
-  background-color: #111827;
-  padding: 1rem;
-  transition: right 0.4s ease-in-out, opacity 0.4s ease;
-  z-index: 1000;
-  opacity: 0.95;
-}
-.sidebar.show {
-  right: 0;
-  opacity: 1;
-}
-.sidebar h2 {
-  color: #ffd700;
-}
-.sidebar a {
-  display: block;
-  padding: 0.5rem;
-  margin-bottom: 0.5rem;
-  color: #f0f0f0;
-  text-decoration: none;
-  border-right: 4px solid transparent;
-  transition: all 0.3s ease;
-}
-.sidebar a:hover {
-  background-color: #1f2937;
-  border-right: 4px solid #ffd700;
-}
+        /* Navigation Styles */
+        nav {
+            background-color: #444;
+            padding: 0.5rem;
+            text-align: center;
+        }
 
-/* Header Glow */
-.header-glow {
-  text-shadow: 0 0 10px #ffd700, 0 0 20px #ffd700;
-}
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 1rem;
+        }
 
-/* Form Controls */
-.form-control {
-  background-color: #1f2937;
-  border: none;
-  color: #fff;
-}
-.form-control::placeholder {
-  color: #aaa;
-}
+        nav a:hover {
+            color: #ccc;
+        }
 
-/* Menu Button */
-.menu-btn {
-  cursor: pointer;
-  font-size: 1.5rem;
-  color: #ffd700;
-  transition: transform 0.3s ease;
-}
-.menu-btn:hover {
-  transform: rotate(90deg);
-}
+        /* Main Content Styles */
+        main {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 2rem;
+        }
 
-/* Section Transitions */
-.section {
-  display: none;
-  opacity: 0;
-  transform: translateY(10px);
-  transition: opacity 0.4s ease, transform 0.4s ease;
-}
-.section.active {
-  display: block;
-  opacity: 1;
-  transform: translateY(0);
-}
+        /* Section Styles */
+        section {
+            background-color: #fff;
+            padding: 2rem;
+            margin-bottom: 2rem;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
 
-/* History Images */
-.history-img {
-  width: 100%;
-  border-radius: 10px;
-  margin-top: 1rem;
-  transition: transform 0.3s ease;
-}
-.history-img:hover {
-  transform: scale(1.03);
-}
+        section h2 {
+            margin-top: 0;
+        }
 
-/* Cards */
-.card-platform,.card {
-  background-color: #111827;
-  border: none;
-  color: #f0f0f0;
-  border-radius: 10px;
-  box-shadow: 0 0 15px rgba(255, 215, 0, 0.1);
-  transition: transform 0.2s, box-shadow 0.3s ease;
-}
-.card-platform:hover,.card:hover {
-  transform: scale(1.05);
-  box-shadow: 0 0 25px rgba(255, 215, 0, 0.3);
-}
+        /* Footer Styles */
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 1rem;
+            text-align: center;
+            clear: both;
+        }
 
-/* Buttons */
-.btn-warning {
-  background-color: #ffd700;
-  color: #111827;
-  font-weight: bold;
-  border: none;
-  transition: all 0.3s ease;
-  box-shadow: 0 4px 10px rgba(255, 215, 0, 0.3);
-}
-.btn-warning:hover {
-  background-color: #ffcc00;
-  transform: scale(1.05);
-}
-
-/* Footer */
-footer {
-  padding: 1rem;
-  background-color: #111827;
-  box-shadow: 0 -2px 10px rgba(255, 215, 0, 0.1);
-  color: #aaa;
-  font-size: 0.9rem;
-}
-
-/* Custom Scrollbar */
-::-webkit-scrollbar {
-  width: 8px;
-}
-::-webkit-scrollbar-track {
-  background: #1f2937;
-}
-::-webkit-scrollbar-thumb {
-  background: #ffd700;
-  border-radius: 4px;
-}
- </style>
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            main {
+                flex-direction: column;
+            }
+        }
+    </style>
 </head>
 <body>
-
-  <!-- NAVIGATION -->
-  <nav class="navbar navbar-dark bg-dark px-4 d-flex justify-content-between">
-    <span class="navbar-brand mb-0 h1">Golden Apple Technologies</span>
-    <span class="menu-btn" onclick="toggleSidebar()">☰</span>
-  </nav>
-
-  <!-- SIDEBAR -->
-  <div id="sidebar" class="sidebar">
-    <h2 class="text-xl font-bold mb-4 header-glow">Menu</h2>
-    <a href="#" onclick="showSection('history')">Info</a>
-    <a href="#" onclick="showSection('vision')"> Vision</a>
-    <a href="#" onclick="showSection('team')"> Officials</a>
-    <a href="#" onclick="showSection('comments')">Leave a Comment</a>
-    <a href="#" onclick="showSection('social')"> Social Media Platforms</a>
-  </div>
-
-  <!-- MAIN CONTENT -->
-  <div class="container mt-4">
-    <!-- HISTORY -->
-    <section id="history" class="section active">
-      <h1 class="text-3xl font-bold mb-3 header-glow">About Golden Apple</h1>
-      <p class="text-lg mb-4">
-        Golden Apple Technologies was born in Kampala from the mentorship of CEO Nathan. What started as a coding dream has evolved into a tech empire—empowering youth, building tools like Codemind VOL 23.0, and launching platforms like iAM Scholar.
-      </p>
-<img src="history1.jpeg" alt="Tech Team Collaboration" class="history-img" />            <img src="history2.jpeg" alt="Coding Innovation" class="history-img" />    </section>
-
-    <!-- VISION -->
-    <section id="vision" class="section">
-      <h2 class="text-2xl font-bold mb-3">Our Vision</h2>
-      <p>
-        We aim to build legendary digital experiences that blend creativity, code, and culture. From educational games to cybersecurity tools, our mission is to shape Africa’s tech future.
-      </p>
-    </section>
-
-    <!-- OFFICIALS -->
-    <section id="team" class="section">
-      <h2 class="text-2xl font-bold mb-4">Golden Apple Officials</h2>
-      <div class="row g-4">
-        <div class="col-md-6 col-lg-4">
-          <div class="card bg-gray-800 text-white">
-            <img src="bot.jpeg" class="card-img-top" alt="ICII">
-            <div class="card-body">
-              <h5 class="card-title">ICII</h5>
-              <p class="card-text">Lead Architect & Visionary</p>
-              <a href="icii.html" class="btn btn-warning">More</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <div class="card bg-gray-800 text-white">
-            <img src="dizzer.jpeg" class="card-img-top" alt="Dizzer J">
-            <div class="card-body">
-              <h5 class="card-title">Dizzer J</h5>
-              <p class="card-text">Co-Director & Music Producer</p>
-              <a href="dizzerj.html" class="btn btn-warning">More</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <div class="card bg-gray-800 text-white">
-            <img src="witness.jpeg" class="card-img-top" alt="witness">
-            <div class="card-body">
-              <h5 class="card-title">Alpha</h5>
-              <p class="card-text">Head of Development</p>
-              <a href="#" class="btn btn-warning">More</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <div class="card bg-gray-800 text-white">
-            <img src="team.jpeg" alt="Whole Team">
-            <div class="card-body">
-              <h5 class="card-title">Whole Team</h5>
-              <p class="card-text">Full Golden Apple Crew</p>
-              <a href="team.html" class="btn btn-warning">More</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- COMMENTS -->
-    <section id="comments" class="section">
-      <h2 class="text-2xl font-bold mb-3">Send Us a Comment</h2>
-      <form onsubmit="sendToWhatsApp(); return false;">
-        <input type="text" id="name" class="form-control mb-2" placeholder="Your Name" required/>
-        <textarea id="message" class="form-control mb-2" rows="4" placeholder="Your Comment" required></textarea>
-        <button type="submit" class="btn btn-warning">Submit</button>
-      </form>
-    </section>
-
-    <!-- SOCIAL MEDIA -->
-    <section id="social" class="section">
-      <h2 class="text-2xl font-bold mb-4 header-glow">Connect With Us</h2>
-      <div class="row g-4">
-        <div class="col-md-6 col-lg-4">
-          <div class="card card-platform p-4 text-center">
-            <h5 class="card-title">Instagram</h5>
-            <a href="https://www.instagram.com/goldenappletech?igsh=ZmY2YTF0cWRodWl4" target="_blank" class="btn btn-warning">Follow @goldenappletech</a>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <div class="card card-platform p-4 text-center">
-            <h5 class="card-title">Facebook</h5>
-            <a href="#" target="_blank" class="btn btn-warning">Like Our Page</a>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <div class="card card-platform p-4 text-center">
-            <h5 class="card-title">TikTok</h5>
-            <a href="#" target="_blank" class="btn btn-warning">Watch @goldenappletech</a>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <div class="card card-platform p-4 text-center">
-            <h5 class="card-title">GitHub</h5>
-            <a href="https://github.com/goldenapplecoders-coder" target="_blank" class="btn btn-warning">Explore Our Repos</a>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <div class="card card-platform p-4 text-center">
-            <h5 class="card-title">LinkedIn</h5>
-            <a href="https://www.linkedin.com/in/golden-apple-technologies-international-b71296387?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="btn btn-warning">Connect With Us</a>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <div class="card card-platform p-4 text-center">
-            <h5 class="card-title">YouTube</h5>
-            <a href="https://youtube.com/@gatech-sos?si=ASUbCHs6OnCEWLdl" target="_blank" class="btn btn-warning">Subscribe</a>
-          </div>
-        </div>
-      </div>
-    </section>
-  </div>
-
-  <!-- FOOTER -->
-  <footer class="text-center mt-5 text-gray-400 text-sm">
-    © 2025 Golden Apple Technologies | Powered by Vision & Code
-  </footer>
-
-  <!-- SCRIPTS -->
-  <script>
-    function toggleSidebar() {
-      document.getElementById('sidebar').classList.toggle('show');
-    }
-    function showSection(id) {
-      document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
-      document.getElementById(id).classList.add('active');
-      toggleSidebar();
-    }
-    function sendToWhatsApp() {
-      const name = document.getElementById('name').value;
-      const message = document.getElementById('message').value;
-      const full = `*Comment*
-> I'm ${name}.
- Here's my comment:\n\n${message}`;
-      window.open(`https://wa.me/256791728084?text=${encodeURIComponent(full)}`, '_blank');
-    }
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <header>
+        <h1>Golden Apple Technologies</h1>
+    </header>
+    <nav>
+        <a href="                     
+        <a href="#vision">Vision</a>
+        <a href="               
+        <a href="#comments">Comments</a>
+        <a href="                         
+    </nav>
+    <main>
+        <section id="history">
+            <h2>History</h2>
+            <p>Golden Apple Technologies was born in Kampala from the mentorship of CEO Nathan. What started as a coding dream has evolved into a tech empire—empowering youth, building tools like Codemind VOL 23.0, and launching platforms like iAM Scholar.</p>
+        </section>
+        <section id="vision">
+            <h2>Vision</h2>
+            <p>We aim to build legendary digital experiences that blend creativity, code, and culture. From educational games to cybersecurity tools, our mission is to shape Africa’s tech future.</p>
+        </section>
+        <section id="team">
+            <h2>Team</h2>
+            <p>Meet our team members:</p>
+            <ul>
+                <li>ICII - Lead Architect & Visionary</li>
+                <li>Dizzer J - Co-Director & Music Producer</li>
+                <li>Alpha - Head of Development</li>
+            </ul>
+        </section>
+        <section id="comments">
+            <h2>Comments</h2>
+            <form>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name"><br><br>
+                <label for="comment">Comment:</label>
+                <textarea id="comment" name="comment"></textarea><br><br>
+                <input type="submit" value="Submit">
+            </form>
+        </section>
+        <section id="social">
+            <h2>Social Media</h2>
+            <p>Follow us on:</p>
+            <ul>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="                    
+                <li><a href="#">TikTok</a></li>
+                <li><a href="                  
+                <li><a href="#">LinkedIn</a></li>
+                <li><a href="#">YouTube</a></li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        &copy; 2025 Golden Apple Technologies
+    </footer>
+    <script>
+        // Add event listener to the submit button
+        document.querySelector('form').addEventListener('submit', (e) => {
+            e.preventDefault();
+            const name = document.getElementById('name').value;
+            const comment = document.getElementById('comment').value;
+            alert(`Thank you, ${name}, for your comment: ${comment}`);
+        });
+    </script>
 </body>
 </html>
