--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
     <button onclick="showSection('about')">About</button>
     <button onclick="showSection('vision')">Vision</button>
     <button onclick="showSection('team')">Team</button>
-    <button onclick="showSection('comment')">Comment</button>
+    <button onclick="showSection('comment')">Comment</button><br>
     <button onclick="showSection('social')">Social</button>
   </nav>
 
@@ -206,7 +206,7 @@
           <div class="form-group">
             <textarea id="message" rows="4" placeholder="Your Comment" required></textarea>
           </div>
-          <button type="submit" class="btn">Send via WhatsApp</button>
+          <button type="submit" class="btn">Send comment</button>
         </form>
       </div>
     </section>
