--- a/icii.html
+++ b/icii.html
@@ -250,7 +250,7 @@
   <!-- Hero Section -->
   <div class="hero-section text-center">
 <div class="avatar-icon pulse">
-  <i class="fas fa-helmet-battle"></i>
+  <i class="fas fa-user-secret"></i>
 </div>
     <h1 class="text-5xl md:text-6xl font-bold mt-4 glow-text">Mugenyi Bob Nathan</h1>
     <p class="text-xl md:text-2xl mt-3 text-cyan-300">CEO, Golden Apple Technologies</p>
