--- a/icii.html
+++ b/icii.html
@@ -293,7 +293,7 @@
           <h3 class="text-xl font-semibold mb-2">Golden Apple Codemind VOL 22.7</h3>
           <p class="text-gray-300">An innovative coding environment for modern developers</p>
         </div>
-      </div><br>
+      </div><br><br>
       <div class="col-md-6 project-item">
         <div class="glass h-100">
           <i class="project-icon fas fa-rocket"></i>
