--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <a class="feature-link" href="dictionary.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-book"></i></div>ONLINE DICTIONARY</div></a>
         <a class="feature-link" href="player.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-headphones"></i></div>MUSIC PLAYER</div></a>
         <a class="feature-link" href="vplayer.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-film"></i></div>VIDEO PLAYER</div></a>
+        <a class="feature-link" href="imgeditor.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-crop"></i></div>IMAGE EDITOR</div></a>
         <a class="feature-link" href="bible.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-book-bible"></i></div>BIBLE SEARCH</div></a>
         <a class="feature-link" href="quran.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-quran"></i></div>QUR'AN SEARCH</div></a>
         <a class="feature-link" href="imageit.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-image"></i></div>DR IMAGE IT</div></a>
