--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a class="feature-link" href="qrcode.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-qrcode"></i></div>QR CODE</div></a>
         <a class="feature-link" href="barcode.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-barcode"></i></div>BAR CODE</div></a>
         <a class="feature-link" href="dictionary.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-book"></i></div>ONLINE DICTIONARY</div></a>
-        <a class="feature-link" href="live.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-video"></i></div>LIVE CHAT</div></a>
+        <a class="feature-link" href="live.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-camera"></i></div>GOLDEN CAM</div></a>
         <a class="feature-link" href="player.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-headphones"></i></div>MUSIC PLAYER</div></a>
         <a class="feature-link" href="vplayer.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-film"></i></div>VIDEO PLAYER</div></a>
         <a class="feature-link" href="imgeditor.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-crop"></i></div>IMAGE EDITOR</div></a>
