--- a/about.html
+++ b/about.html
@@ -637,10 +637,10 @@
         <div class="team-card fade-in">
           <img src="https://images.unsplash.com/photo-1588072432836-e100327d50a7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80" alt="Alpha" class="team-img">
           <div class="team-info">
-            <h3 class="team-name">Alpha</h3>
+            <h3 class="team-name">Gregory Steve</h3>
             <p class="team-role">Head of Development</p>
-            <p class="team-desc">Always dressed in college uniform, balancing studies with tech leadership.</p>
-            <a href="#" class="team-btn">View Profile</a>
+            <p class="team-desc">Web developer, socialist.</p>
+            <a href="steve.html" class="team-btn">View Profile</a>
           </div>
         </div>
         <div class="team-card fade-in">
