--- a/about.html
+++ b/about.html
@@ -635,7 +635,7 @@
           </div>
         </div>
         <div class="team-card fade-in">
-          <img src="https://images.unsplash.com/photo-1588072432836-e100327d50a7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80" alt="Alpha" class="team-img">
+          <img src="IMG-20250920-WA0008.jpg">
           <div class="team-info">
             <h3 class="team-name">Gregory Steve</h3>
             <p class="team-role">Head of Development</p>
