--- a/about.html
+++ b/about.html
@@ -617,7 +617,7 @@
       <h2 class="section-title fade-in">Our Team</h2>
       <div class="team-grid">
         <div class="team-card fade-in">
-          <img src="https://images.unsplash.com/photo-1551650975-87deedd944c3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80" alt="ICII" class="team-img">
+          <img src="IMG-20250918-WA0007.jpg">
           <div class="team-info">
             <h3 class="team-name">ICII</h3>
             <p class="team-role">Lead Architect & Visionary</p>
