--- a/about.html
+++ b/about.html
@@ -635,10 +635,10 @@
           </div>
         </div>
         <div class="team-card fade-in">
-          <img src="IMG-20250922-WA0006.jpg">
+          <img src="IMG-20250922-WA0006.jpg" class="team-img">
           <div class="team-info">
             <h3 class="team-name">Gregory Steve</h3>
-            <p class="team-role">Head of Development</p>
+            <p class="team-role">In charge of iAM Scholar</p>
             <p class="team-desc">Web developer, socialist.</p>
             <a href="steve.html" class="team-btn">View Profile</a>
           </div>
