--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a class="feature-link" href="dictionary.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-book"></i></div>ONLINE DICTIONARY</div></a>
         <a class="feature-link" href="live.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-camera"></i></div>GOLDEN CAM</div></a>
         <a class="feature-link" href="player.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-headphones"></i></div>MUSIC PLAYER</div></a>
-        <a class="feature-link" href="mix.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-compact-disc fa-spin"></i></div>VIRTUAL MUSIC</div></a>
+        <a class="feature-link" href="mix.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-microphone fa-spin"></i></div>VOICE CHANGER</div></a>
         <a class="feature-link" href="vplayer.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-film"></i></div>VIDEO PLAYER</div></a>
         <a class="feature-link" href="imgeditor.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-crop"></i></div>IMAGE EDITOR</div></a>
         <a class="feature-link" href="bible.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-book-bible"></i></div>BIBLE SEARCH</div></a>
