--- a/games.html
+++ b/games.html
@@ -82,6 +82,11 @@
       <button onclick="launchGame('tictac.html')">Play Now</button>
     </div>
     <div class="card">
+      <h3>Asphait Cor Race</h3>
+      <p>Get in the race </p>
+      <button onclick="launchGame('car.html')">Play Now</button>
+    </div>
+    <div class="card">
       <h3>Guess the Number</h3>
       <p>Can you find the hidden number?</p>
       <button onclick="launchGame('guess.html')">Play Now</button>
