--- a/games.html
+++ b/games.html
@@ -82,7 +82,7 @@
       <button onclick="launchGame('tictac.html')">Play Now</button>
     </div>
     <div class="card">
-      <h3>Asphait Cor Race</h3>
+      <h3>Water Sort</h3>
       <p>Get in the race </p>
       <button onclick="launchGame('car.html')">Play Now</button>
     </div>
