--- a/games.html
+++ b/games.html
@@ -82,6 +82,11 @@
       <button onclick="launchGame('tictac.html')">Play Now</button>
     </div>
     <div class="card">
+      <h3>Checkers</h3>
+      <p>Challenge the bot or a friend!</p>
+      <button onclick="launchGame('checkers.html')">Play Now</button>
+    </div>
+    <div class="card">
       <h3>Water Sort</h3>
       <p>Get in the race </p>
       <button onclick="launchGame('car.html')">Play Now</button>
