--- a/about.html
+++ b/about.html
@@ -617,7 +617,7 @@
       <h2 class="section-title fade-in">Our Team</h2>
       <div class="team-grid">
         <div class="team-card fade-in">
-          <img src="IMG-20250918-WA0007.jpg">
+          <img src="IMG-20250918-WA0007.jpg" class="team-img">
           <div class="team-info">
             <h3 class="team-name">ICII</h3>
             <p class="team-role">Lead Architect & Visionary</p>
