--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
 
   <div id="modal" class="modal">
     <div class="modal-content">
-      <h2><i class="fas fa-bank"></i>SERVICES</h2>
       <ul class="modal-list">
         <a href="https://wandbox.org/#"><li><i class="fas fa-file-code"></i> Compiler- Test your coding skills</li></a>
-       <a href="coder.html"><li><i class="fas fa-robot"></i> Assistant - AI code helper</li></a>
+       <a href="README.md"><li><i class="fas fa-robot"></i> G-A Desc</li></a>
       <a href="comments.html"><li><i class="fas fa-message"></i> User Experience - Feedback</li></a>
       <a href="about.html"><li><i class="fas fa-phone"></i> Contact Golden Apple</li></a>
       </ul>
