--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <h2>Golden Apple Features</h2>
       <div class="features-grid">
         <a class="feature-link" href="qrcode.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-qrcode"></i></div>QR CODE</div></a>
+        <a class="feature-link" href="checkers.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-wifi"></i></div>CONNECTIVITY</div></a>
         <a class="feature-link" href="barcode.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-barcode"></i></div>BAR CODE</div></a>
         <a class="feature-link" href="dictionary.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-book"></i></div>ONLINE DICTIONARY</div></a>
         <a class="feature-link" href="live.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-camera"></i></div>GOLDEN CAM</div></a>
