--- a/bible.html
+++ b/bible.html
@@ -7,98 +7,360 @@
   <!-- Google Fonts for Modern Look -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
   <style>
-    body {
-      background: #f4f8fc;
-      font-family: 'Montserrat', Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
-      margin: 0;
-    }
-    .container {
-      background: #fff;
-      margin-top: 60px;
-      padding: 32px 40px 36px 40px;
-      border-radius: 16px;
-      box-shadow: 0 2px 18px rgba(0,0,0,0.11);
-      width: 100%;
-      max-width: 480px;
-      text-align: center;
-    }
-    h1 {
-      color: #c9a245;
-      font-size: 2rem;
-      margin-bottom: 18px;
-    }
-    label {
-      font-size: 1.1rem;
-      color: #333;
-      margin-bottom: 8px;
-      display: block;
-      font-weight: 600;
-    }
-    select, input[type="number"] {
-      padding: 10px;
-      border-radius: 8px;
-      border: 1px solid #c7c7c7;
-      font-size: 1rem;
-      margin-bottom: 16px;
-      outline: none;
-      transition: border 0.2s;
-      width: 48%;
-    }
-    select:focus, input[type="number"]:focus {
-      border: 1.5px solid #c9a245;
-    }
-    button {
-      background: #c9a245;
-      color: #fff;
-      border: none;
-      padding: 10px 28px;
-      font-size: 1rem;
-      border-radius: 8px;
-      cursor: pointer;
-      font-weight: 600;
-      margin-bottom: 16px;
-      transition: background 0.2s;
-      width: 100%;
-    }
-    button:hover {
-      background: #a58732;
-    }
-    .bible-output {
-      margin-top: 24px;
-      text-align: left;
-      background: #f5f5f5;
-      border-radius: 10px;
-      padding: 18px 16px;
-      font-size: 1.05rem;
-      min-height: 60px;
-      white-space: pre-wrap;
-      color: #2d7d46;
-      font-family: 'Montserrat', Arial, sans-serif;
-    }
-    .home-btn {
-      display: inline-block;
-      margin-top: 24px;
-      background: #2d7d46;
-      color: #fff;
-      padding: 8px 22px;
-      border-radius: 8px;
-      font-weight: 600;
-      text-decoration: none;
-      box-shadow: 0 1px 6px rgba(0,0,0,0.10);
-      transition: background 0.2s;
-    }
-    .home-btn:hover {
-      background: #226135;
-    }
-    .error {
-      color: #d43f3a;
-      font-weight: 600;
-      margin-top: 16px;
-    }
+/* === ENHANCED CSS FOR ONLINE BIBLE WEBSITE === */
+
+/* Modern CSS Reset & Base Styles */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  --primary-gold: #c9a245;
+  --primary-green: #2d7d46;
+  --dark-green: #1a5c33;
+  --light-gold: #e8d7a8;
+  --light-bg: #f8f9fa;
+  --white: #ffffff;
+  --text-dark: #333333;
+  --text-light: #6c757d;
+  --shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+  --shadow-hover: 0 8px 24px rgba(0, 0, 0, 0.12);
+  --border-radius: 12px;
+  --transition: all 0.3s ease;
+}
+
+body {
+  background: linear-gradient(135deg, #f4f8fc 0%, #e8f2f8 100%);
+  font-family: 'Montserrat', 'Segoe UI', Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  margin: 0;
+  padding: 20px;
+  color: var(--text-dark);
+  line-height: 1.6;
+}
+
+/* Main Container */
+.container {
+  background: var(--white);
+  margin: 20px auto;
+  padding: 40px;
+  border-radius: var(--border-radius);
+  box-shadow: var(--shadow);
+  width: 100%;
+  max-width: 520px;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  transition: var(--transition);
+}
+
+.container:hover {
+  box-shadow: var(--shadow-hover);
+}
+
+.container::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background: linear-gradient(90deg, var(--primary-gold), var(--primary-green));
+}
+
+/* Typography */
+h1 {
+  color: var(--primary-gold);
+  font-size: 2.2rem;
+  margin-bottom: 24px;
+  font-weight: 700;
+  letter-spacing: -0.5px;
+  position: relative;
+  padding-bottom: 12px;
+}
+
+h1::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 25%;
+  width: 50%;
+  height: 3px;
+  background: linear-gradient(90deg, transparent, var(--primary-gold), transparent);
+}
+
+/* Form Elements */
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+}
+
+label {
+  font-size: 1.1rem;
+  color: var(--text-dark);
+  margin-bottom: 6px;
+  display: block;
+  font-weight: 600;
+  text-align: left;
+}
+
+.input-group {
+  display: flex;
+  gap: 12px;
+  justify-content: space-between;
+}
+
+.input-field {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+select, input[type="number"] {
+  padding: 14px 16px;
+  border-radius: var(--border-radius);
+  border: 2px solid #e1e5e9;
+  font-size: 1rem;
+  font-family: 'Montserrat', sans-serif;
+  outline: none;
+  transition: var(--transition);
+  background-color: var(--white);
+  color: var(--text-dark);
+  width: 100%;
+}
+
+select:focus, input[type="number"]:focus {
+  border-color: var(--primary-gold);
+  box-shadow: 0 0 0 3px rgba(201, 162, 69, 0.2);
+}
+
+/* Button Styles */
+button {
+  background: linear-gradient(135deg, var(--primary-gold), #d4b354);
+  color: var(--white);
+  border: none;
+  padding: 14px 28px;
+  font-size: 1.1rem;
+  border-radius: var(--border-radius);
+  cursor: pointer;
+  font-weight: 600;
+  transition: var(--transition);
+  width: 100%;
+  margin-top: 10px;
+  box-shadow: 0 4px 6px rgba(201, 162, 69, 0.3);
+  position: relative;
+  overflow: hidden;
+}
+
+button:hover {
+  background: linear-gradient(135deg, #b89436, var(--primary-gold));
+  transform: translateY(-2px);
+  box-shadow: 0 6px 12px rgba(201, 162, 69, 0.4);
+}
+
+button:active {
+  transform: translateY(0);
+}
+
+button::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 5px;
+  height: 5px;
+  background: rgba(255, 255, 255, 0.5);
+  opacity: 0;
+  border-radius: 100%;
+  transform: scale(1, 1) translate(-50%);
+  transform-origin: 50% 50%;
+}
+
+button:focus:not(:active)::after {
+  animation: ripple 1s ease-out;
+}
+
+@keyframes ripple {
+  0% {
+    transform: scale(0, 0);
+    opacity: 0.5;
+  }
+  100% {
+    transform: scale(20, 20);
+    opacity: 0;
+  }
+}
+
+/* Bible Output Area */
+.bible-output {
+  margin-top: 30px;
+  text-align: left;
+  background: var(--light-bg);
+  border-radius: var(--border-radius);
+  padding: 24px;
+  font-size: 1.1rem;
+  min-height: 120px;
+  white-space: pre-wrap;
+  color: var(--dark-green);
+  font-family: 'Montserrat', Arial, sans-serif;
+  border-left: 4px solid var(--primary-gold);
+  transition: var(--transition);
+  position: relative;
+}
+
+.bible-output::before {
+  content: '"';
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-size: 4rem;
+  color: rgba(201, 162, 69, 0.2);
+  font-family: Georgia, serif;
+  line-height: 1;
+}
+
+.bible-output strong {
+  display: block;
+  margin-bottom: 12px;
+  color: var(--primary-green);
+  font-size: 1.2rem;
+  border-bottom: 1px solid rgba(45, 125, 70, 0.2);
+  padding-bottom: 8px;
+}
+
+/* Home Button */
+.home-btn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 28px;
+  background: linear-gradient(135deg, var(--primary-green), var(--dark-green));
+  color: var(--white);
+  padding: 12px 26px;
+  border-radius: var(--border-radius);
+  font-weight: 600;
+  text-decoration: none;
+  box-shadow: 0 4px 6px rgba(45, 125, 70, 0.3);
+  transition: var(--transition);
+  gap: 8px;
+}
+
+.home-btn:hover {
+  background: linear-gradient(135deg, var(--dark-green), var(--primary-green));
+  transform: translateY(-2px);
+  box-shadow: 0 6px 12px rgba(45, 125, 70, 0.4);
+  color: var(--white);
+  text-decoration: none;
+}
+
+.home-btn:active {
+  transform: translateY(0);
+}
+
+/* Error Message Styling */
+.error {
+  color: #d43f3a;
+  font-weight: 600;
+  margin-top: 16px;
+  padding: 12px;
+  background: rgba(212, 63, 58, 0.1);
+  border-radius: 8px;
+  border-left: 4px solid #d43f3a;
+}
+
+/* Loading Animation */
+@keyframes pulse {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.loading {
+  animation: pulse 1.5s infinite;
+  text-align: center;
+  color: var(--text-light);
+}
+
+/* Responsive Design */
+@media (max-width: 576px) {
+  .container {
+    padding: 30px 20px;
+    margin: 10px;
+  }
+  
+  h1 {
+    font-size: 1.8rem;
+  }
+  
+  .input-group {
+    flex-direction: column;
+    gap: 0;
+  }
+  
+  select, input[type="number"] {
+    width: 100%;
+  }
+  
+  .bible-output {
+    padding: 18px;
+    font-size: 1rem;
+  }
+}
+
+/* Selection Styling */
+::selection {
+  background-color: rgba(201, 162, 69, 0.3);
+}
+
+/* Scrollbar Styling (Webkit browsers) */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--primary-gold);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #b89436;
+}
+
+/* Focus states for accessibility */
+button:focus, select:focus, input:focus, .home-btn:focus {
+  outline: 2px solid var(--primary-gold);
+  outline-offset: 2px;
+}
+
+/* Print Styles */
+@media print {
+  .container {
+    box-shadow: none;
+    border: 1px solid #ddd;
+  }
+  
+  button, .home-btn {
+    display: none;
+  }
+}
   </style>
 </head>
 <body>
