--- a/dizzmuxic.html
+++ b/dizzmuxic.html
@@ -128,7 +128,7 @@
           <strong>Listeners:</strong> 12,430<br>
           <strong>Likes:</strong> 1.4M
         </div>
-        <a href="shoot to kill by Dizzer j" download class="download-btn"><i class="fas fa-download"></i> Download STK</a>
+        <a href="stk.mp3" download class="download-btn"><i class="fas fa-download"></i> Download STK</a>
       </div>
 
       <div class="card">
@@ -156,7 +156,7 @@
           <strong>Listeners:</strong> 7,540<br>
           <strong>Likes:</strong> 980
         </div>
-        <a href="ssm.mp3" download class="download-btn"><i class="fas fa-download"></i> Download SSM</a>
+        <a href="ssm.mp3" download class="download-btn" onclick="alert('audio unpublished!')"><i class="fas fa-download"></i> Download SSM</a>
       </div>
 
       <div class="card">
