--- a/games.html
+++ b/games.html
@@ -114,7 +114,7 @@
   </div>
 
   <footer>
-    Powered by Golden Apple Technologies • Designed for joy and excellence
+    Powered by Golden Apple Technologies • Designed for <a href="lino.n.html">joy </a>and excellence
   </footer>
 
   <script>
