--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="modal-content">
       <ul class="modal-list">
         <a href="https://wandbox.org/#"><li><i class="fas fa-file-code"></i> Compiler- Test your coding skills</li></a>
-       <a href="vcall.html"><li><i class="fas fa-robot"></i> G-A Desc</li></a>
+       <a href="coder.html"><li><i class="fas fa-robot"></i> Coddit AI</li></a>
       <a href="comments.html"><li><i class="fas fa-message"></i> User Experience - Feedback</li></a>
       <a href="about.html"><li><i class="fas fa-phone"></i> Contact Golden Apple</li></a>
       </ul>
