--- a/imageit.html
+++ b/imageit.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Flux Image Generator</title>
+  <title>Doctor Imagitt</title>
   <style>
     :root {
       --bg-dark: #1f1c2c;
