--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <a class="feature-link" href="checkers.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-save"></i></div>DOCUMENT CREATOR</div></a>
         <a class="feature-link" href="compiler_html.html"><div class="feature-card"><div class="feature-icon"><i class="fab fa-html5"></i></div>HTML COMPILER</div></a>
         <a class="feature-link" href="barcode.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-barcode"></i></div>BAR CODE</div></a>
+        <a class="feature-link" href="sticker.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-sticky-note"></i></div>STICKER MAKER</div></a>
         <a class="feature-link" href="dictionary.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-book"></i></div>ONLINE DICTIONARY</div></a>
         <a class="feature-link" href="live.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-camera"></i></div>GOLDEN CAM</div></a>
         <a class="feature-link" href="player.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-headphones"></i></div>MUSIC PLAYER</div></a>
