--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     <a href="https://goldenapplecoders-coder.github.io/services.html" class="dropdown-item">Services</a>
     <a href="https://tum-code.github.io" class="dropdown-item">TumCode</a>
     <a href="https://ga-techupdates.github.io" class="dropdown-item">Tech Updates</a>
-    <a href="#" class="dropdown-item">Item 5</a>
+    <a href="dizzmuxic.html" class="dropdown-item">DizzMuxic</a>
   </div>
 </div>
 </div>
