Update link for Document Creator button

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     <i class="fas fa-barcode"></i>  BARCODE GENERATOR</button>
       <button class="tool" onclick="location.href='compiler_html.html'">
     <i class="fab fa-html5"></i>  HTML COMPILER</button>
-      <button class="tool" onclick="location.href='https://tum-code.github.io/document_creator.html'">
+      <button class="tool" onclick="location.href='https://tum-code.github.io/doc_creator.html'">
     <i class="fas fa-file-text"></i>  DOCUMENT CREATOR</button>
       <button class="tool" onclick="location.href='drive.html'">
     <i class="fas fa-cloud"></i>  GOLDRIVE CLOUD</button>
