--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Golden Apple Technologies">
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
-    <meta property="og:title" content="Golden Apple Technologies - Programmer's Hub & Developer Tools">
+    <meta property="og:title" content="Golden Apple Technologies">
     <meta property="og:description" content="Golden Apple Technologies - A Great Team Of Developers, Code Oriented, Delighted to teach Programming To All">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://goldenapplecoders-coder.github.io">
