Update dropdown links in index.html

--- a/index.html
+++ b/index.html
@@ -208,11 +208,12 @@
     <span class="fas fa-bars"></span>
   </button>
   <div class="dropdown-menu" id="dropdownMenu">
-    <a href="https://goldenapplecoders-coder.github.io/about.html" class="dropdown-item">Contact</a>
+    <a href="feedback.html" class="dropdown-item">Contact</a>
     <a href="https://goldenapplecoders-coder.github.io/services.html" class="dropdown-item">Services</a>
     <a href="https://tum-code.github.io" class="dropdown-item">TumCode</a>
     <a href="https://ga-techupdates.github.io" class="dropdown-item">Tech Updates</a>
     <a href="dizzmuxic.html" class="dropdown-item">DizzMuxic</a>
+      <a href="about.html" class="dropdown-item">About</a>
   </div>
 </div>
 </div>
